--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://myuser:mypassword@localhost:5432/mydatabase"
+USER_DATABASE_URL="postgres://myuser:mypassword@localhost:5432/mydatabase"
+PRODUCT_DATABASE_URL="postgres://myuser:mypassword@localhost:5433/mydatabase"
